# SyncDC

./: .gitignore  CMakeLists.txt  README.md  batch-test.sh
sync-paxos/: CMakeLists.txt  README.md  common.hh  config.yaml  paxos-app-client.cc  paxos-app-client.h  paxos-app-server-listener.cc  paxos-app-server-proposer.cc  paxos-app-server.cc  paxos-app-server.h  paxos-app.cc  paxos-app.h  paxos-app.hh  paxos-common.cc  paxos-common.h  paxos-frame.cc  paxos-frame.h  paxos-frame.hh  paxos-main.cc  paxos-topology-clos.cc  paxos-topology-clos.h
sync-paxos/design-uml/: asyn-leader.puml
utils/: plot-async-opps.py  plot-paxos-test.py  plot-sync-opps.py
